working on copy, ideas for bio and changed header image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		
 		<link rel="icon" type="image/png" href="imgs/favicon.png"/>
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" type="text/css"/>
+		<link href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,300italic,100italic,400italic" rel="stylesheet" type="text/css"/>
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" type="text/css"//>
 		<link rel="stylesheet" href="stylesheets/animate.css" type="text/css"/>
 		<link rel="stylesheet" href="stylesheets/default.css" type="text/css"/>
@@ -19,13 +20,13 @@
 		<header>
 			<!-- Of course you gotta check my semantics! -->
 			<h1>Philipe <s>Tauk</s> Casarotte</h1>
-			<p>is an interdisciplinary digital professional with vast knowledge and experience in development, client services and digital strategy.</p>
-			<button>More about Philipe</button>						
+			<p>is a creative full stack developer that loves Ruby, Javascript and a semantic-driven HTML. </p>
+			<button>READ FULL BIO</button>
 			<img src="images/philipe-casarotte-b-w.png" width="1480" height="1712" alt="Philipe Casarotte" class="profile-id"/>
 		</header>
 		<section id="bio">
 			<h2>Brief ( )</h2>
-			<p class="intro"><big>Philipe is a creative full stack developer that loves Ruby, Javascript and a well semantically structured HTML. He loves the bigger picture and working at the trick intersection of UX, visual design, code and scope.</big></p>
+			<p class="intro"><big>is an interdisciplinary digital professional with vast knowledge and experience in development, client services and digital strategy. Philipe is a creative full stack developer that loves Ruby, Javascript and a well semantically structured HTML. He loves the bigger picture and working at the trick intersection of UX, visual design, code and scope.</big></p>
 			<div>
 				<p>As Product Manager, Producer, Team and Project Manager at DBurns, Philipe guides clients in their efforts to create a strategy and roll out their products and services.</p>
 				<p>For the last eight plus years at DBurns Philipe has exercised roles in client services, project management, web development, UI/UX and digital strategy. Philipe Casarotte has experience leading multi-disciplinary teams and have a strong diversificate knowledge that allows him to quickly connect with team members and clients.</p>
@@ -47,7 +48,7 @@
 			</div>
 		</section>
 		<section id="work">
-			<h2>These are some projects I have being part of while a DBurns</h2>
+			<h2>I enjoy every moment but some are remarkable and special. <br/>These are some projects I have being part of while a DBurns</h2>
 			<ul>
 				<li class="the-fare-trade">
 					<a href="http://www.thefaretrade.com">
