add idea for projct list

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 			</ul>
 			<details>
 				<summary>Other projects I have helped launch, through the years</summary>
+				<!-- Add Full List or Add stats: 60+ As ruby DEveloper, as PHP Developer, as Projects Manager, as Product manager, etc-->
 				<h5>Rails Developer</h5>
 				<ul>
 				<li>Mojo Marketing</li>
