--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 		
 		<link rel="icon" type="image/png" href="imgs/favicon.png"/>
+		<link href="http://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet" type="text/css"/>
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" type="text/css"/>
 		<link href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,300italic,100italic,400italic" rel="stylesheet" type="text/css"/>
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" type="text/css"//>
@@ -18,26 +19,27 @@
     <body>
 		<!-- Of course you gotta check my semantics! -->
 		<header>
-			<h1>Philipe <s>Tauk</s> Casarotte</h1>
-			<p>is <a href="http://www.dburnsdesign.com/about-us">DBurns CTO &amp; Product Manager</a>. He has strong experience in web development, client relations and digital strategy. He is a coder.</p>
-			<button>READ FULL BIO</button>
-			<img src="images/philipe-casarotte-b-w.png" width="1480" height="1712" alt="Philipe Casarotte" class="profile-id"/>
+			<div>
+				<h1>Philipe <s>Tauk</s> Casarotte</h1>
+				<p>is <a href="http://www.dburnsdesign.com/about-us">DBurns CTO &amp; Product Manager</a>. He has strong experience in web development, client relations and digital strategy. He is a coder.</p>
+				<button>READ FULL BIO</button>
+			</div>
+			<img src="images/philipe-casarotte-fish.png" width="1480" height="1712" alt="Philipe Casarotte" class="profile-id"/>
 		</header>
 		<section id="bio">
 			<h2></h2>
-			<p class="intro"><big>Bio ( ): As CTO, Product and Project Manager at DBurns, Philipe guides clients in their efforts to create a strategy and roll out plan for their products and services.</big></p>
+			<p class="intro"><big><strong>Bio:</strong> As CTO, Product and Project Manager at DBurns, Philipe guides clients in their efforts to create a strategy and roll out plan for their products and services.</big></p>
 			<div>
 				<p>For the last eight plus years at DBurns, Philipe has exercised roles in client relations, project management, front and back end development, UX/UI and digital strategy. Philipe Casarotte has experience leading multi-disciplinary teams and have a diversificate, yet profound technical knowledge which allows him to quickly connect with team members and clients.</p>
-				<p>Previously, Philipe worked as an IT Analyst for <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global japanese trading company and as a Designer then Software Engineer for one of Brazil's biggets newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a> (a.k.a. Estadão). At Estadão, he helped one of the its internal agencies to develop automation software that was sold to renoun Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Getulio Vargas-RJ</a>.</p>
+				<p>Previously, Philipe worked as an IT Analyst for <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global japanese trading company and as a Designer then Software Engineer for one of Brazil"s biggets newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a> (a.k.a. Estadão). At Estadão, he helped one of its internal agencies to develop automation software that was sold to renoun Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Getulio Vargas-RJ</a>.</p>
 				<p>Philipe has also taught Web Design Courses for 2 universities, SENAC-SP and FASM-SP. His work has won recognition from Webby and W3 Awards. He holds a B.A. in Digital Media from <a href="http://en.wikipedia.org/wiki/Pontif%C3%ADcia_Universidade_Cat%C3%B3lica_de_S%C3%A3o_Paulo">PUC-SP</a>.</p>
-				<blockquote>I code 24/7, even when not writing code.</blockquote>
 				<!-- Philipe is a creative full stack developer that loves Ruby, Javascript and a semantic-driven HTML. -->
 			</div>
 		</section>
 		<section id="recent-work">
 			<!-- <iframe id="video" src="http://player.vimeo.com/video/121649600?autoplay=1&amp;api=1&amp;loop=1&amp;title=0&amp;player_id=0" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe> -->
 			<div>
-				<h2>Latest Project</h2>
+				<h2>latest project</h2>
 				<figure>
 					<img src="beckmen-vineyards-before-and-after.jpg" alt="Beckmen Vineyards - Before & After Screenshot" width="304" height="228"/>
 					<figcaption>Beckmen Vineyards</figcaption>
@@ -293,7 +295,7 @@
 
 				<i>Extrointrovert</i>
 			</p>
-			<p><small>I am not into video games.</small></p>
+			<!-- <p><small>I am not into video games.</small></p> -->
 		</section>
 		<footer>
 			<nav>
