changes to layout formatting css

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
     <body>
 		<!-- Of course you gotta check my semantics! -->
 		<header>
-			<div>
+			<div class="intro">
 				<h1>Philipe <s>Tauk</s> Casarotte</h1>
 				<p>is <a href="http://www.dburnsdesign.com/about-us">DBurns CTO &amp; Product Manager</a>. He has strong experience in web development, client relations and digital strategy. He is a coder.</p>
 				<button>READ FULL BIO</button>
 			</div>
-			<img src="images/philipe-casarotte-fish.png" width="1480" height="1712" alt="Philipe Casarotte" class="profile-id"/>
+			<div>
+				<img src="images/philipe-casarotte-fish.png" width="1480" height="1712" alt="Philipe Casarotte" class="profile-id"/>
+			</div>
 		</header>
 		<section id="bio">
 			<h2></h2>
