--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		
 		<link rel="icon" type="image/png" href="imgs/favicon.png"/>
 		<link href="http://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet" type="text/css"/>
-		<link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300|Roboto:400,300,500italic,400italic,700,700italic,500,300italic|Open+Sans+Condensed:300,700,300italic|Open+Sans:300italic,400italic,600italic,400,300,600,700' rel='stylesheet' type='text/css'/>
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" type="text/css"//>
+		<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|Open+Sans+Condensed:300,300italic,700|Yanone+Kaffeesatz:400,300,700|Amatic+SC:400,700' rel='stylesheet' type='text/css'/>
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" type="text/css"/>
 		<link rel="stylesheet" href="stylesheets/animate.css" type="text/css"/>
 		<link rel="stylesheet" href="stylesheets/default.css" type="text/css"/>
     </head>
@@ -19,17 +19,20 @@
 		<!-- Of course you gotta check out my semantics! -->
 		<header class="flexbox">
 			<div class="intro col">
-				<h1>&raquo; Philipe <s>Tauk</s> Casarotte &laquo;</h1>
-				<p>is <a href="http://www.dburnsdesign.com/about-us">DBurns CTO &amp; Product Manager</a>. He has strong experience in web development, client relations and digital strategy. He is a coder.</p>
-				<button rel="#bio">FULL BIO</button>
+				<h1>
+					Philipe <s>Tauk</s> Casarotte
+					<small>is <a href="http://www.dburnsdesign.com/about-us">DBurns CTO &amp; Product Manager</a>.</small>
+				</h1>
+				<p>He has strong experience in web development, client relations and digital strategy. He is a coder.</p>
+				<button rel="#bio">FULL BIO <i class="fa fa-plus"></i></button>
 				<a href="#bio" class="animated infinite bounce" rel="#bio">
 					<i class="fa fa-angle-down"></i>
-					meet me in less<br/>
-					than 3 minutes
+					<!-- meet me in less<br/>
+					than 3 minutes -->
 				</a>
 			</div>
 			<div class="col">
-				<img src="images/philipe-casarotte-fish.png" width="1480" height="1712" alt="Philipe Casarotte" class="profile-id"/>
+				<img src="images/philipe-casarotte.png" width="1480" height="1712" alt="Philipe Casarotte" class="profile-id"/>
 			</div>
 		</header>
 		<section id="bio">
@@ -53,30 +56,31 @@
 					<a href="https://instagram.com/explore/tags/workingonbeckmen/">#workingonbeckmen</a>
 				</h2>
 				<!--TO-DO add beckmen tree logo -->
+				<img src="images/logos/beckmen-vineyards.png" width="94" height="78" alt="Beckmen Vineyards"/>
 				<p>I am currently working on the rebranding and relaunching of Beckmen Vineyards website and wine club. You can follow our work by clicking on the Instagram hashtag above.</p>
-				<progress value="60" max="100"></progress>				
 			</div>
 		</section>
 		<section id="work">
-			<h2>Some notable projects</h2>
-			<ul>
+			<h2>Selected <strong>projects</strong></h2>
+			<ul class="flexbox">
 				<li class="the-fare-trade">
 					<a href="http://www.thefaretrade.com">
+						<h4>The Fare Trade</h4>
 						<figure>
 							<img src="images/featured-projects/the-fare-trade.jpg" alt="The Fare Trade - Site Screenshot" width="16" height="9"/>
 							<figcaption>
-								The Fare Trade<br/>
 								Subscription based monthly boxes with curated gourmet ingredients delivered to your door.
 							</figcaption>
 						</figure>
+						
 					</a>
 				</li>
 				<li>
 					<a href="http://www.nixon100.org">
+						<h4>Richard Nixon Centennial</h4>
 						<figure>
 							<img src="images/featured-projects/richard-nixon.jpg" alt="Richard Nixon" width="16" height="9"/>
 							<figcaption>
-								Richard Nixon Centennial<br/>
 								Digital exposition for exploring the legacy of the patriot, president, and peacemaker Richard Nixon.
 							</figcaption>
 						</figure>
@@ -84,10 +88,10 @@
 				</li>
 				<li>
 					<a href="http://www.zenartsla.com">
+						<h4>ZenArts LA</h4>
 						<figure>
 							<img src="images/featured-projects/zen-arts-la.jpg" alt="Zen Arts LA"/>
 							<figcaption>
-								ZenArts LA<br/>
 								Elegant and extravagant corporate event entertainment and production company.
 							</figcaption>
 						</figure>
@@ -96,30 +100,39 @@
 			</ul>
 		</section>
 		<section id="stats">
-			<h2>Experience Stats</h2>
+			<h2>Experience in Numbers</h2>
+			<p>I've been involved in more than 450 projects through out the years. Below are my experience brken down my roles in each project.</p>
 			<ul>
 				<li>
 					<h5>
-						As Rails Developer
+						<img src="images/logos/ruby.png" width="512" height="512" alt="Ruby">
+						As Rails Back-end Engineer
 						<big>30+</big>
+						projects
 					</h5>
 				</li>
 				<li>
 					<h5>
-						As PHP Developer
+						<img src="images/logos/php.png" width="2048" height="2048" alt="Php">
+						As PHP Back-end Engineer
 						<big>100+</big>
+						projects
 					</h5>
 				</li>
 				<li>
 					<h5>
-						As Project Manager
-						<big>200+</big>
+						<img src="images/logos/html.png" width="1200" height="1200" alt="Html">
+						As Front-End Engineer
+						<big>150+</big>
+						projects
 					</h5>
 				</li>
 				<li>
 					<h5>
+						<img src="images/logos/html.png" width="1200" height="1200" alt="Html">
 						As Project Manager
 						<big>200+</big>
+						projects
 					</h5>
 				</li>
 			</ul>
@@ -180,13 +193,12 @@
 			<polygon points="0,55.314 47.611,85.92 47.611,70.384 6.174,43.718 "/>
 			<path d="M50,14.08L9.724,39.972L50,65.887l40.318-25.888L50,14.08z M50,30.034L29.95,42.929l-5.027-3.228L50,23.576l25.077,16.125  l-5.026,3.228L50,30.034z"/>
 			</svg>
-			
+			http://urbaninfluence.com/work/
 			<img src="images/softwares-techniques/evernote.png" width="200" height="200" alt="Evernote">
 			<img src="images/softwares-techniques/philz-coffee.png" width="200" height="200" alt="Philz Coffee">
 			<img src="images/softwares-techniques/pomodoro.png"  alt="Pomodoro">
 			<img src="images/softwares-techniques/terminal.png" width="200" height="200" alt="Terminal">
 			<img src="images/softwares-techniques/textmate.png" width="200" height="200" alt="Textmate">
-			<i>Extrointrovert</i>
 			</p>
 		</section>
 		<footer>
