--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 					<small>is <a href="http://www.dburnsdesign.com/about-us">DBurns CTO &amp; Product Manager</a>.</small>
 				</h1>
 				<p>He has strong experience in web development, client relations and digital strategy. He is a coder.</p>
-				<button rel="#bio">FULL BIO <i class="fa fa-plus"></i></button>
+				<button rel="#bio">FULL BIO &raquo;</button>
 				<a href="#bio" class="animated infinite bounce" rel="#bio">
 					<i class="fa fa-angle-down"></i>
-					<!-- meet me in less<br/>
-					than 3 minutes -->
+					<span>2 minutes</span>
 				</a>
 			</div>
 			<div class="col">
@@ -57,7 +56,7 @@
 				</h2>
 				<!--TO-DO add beckmen tree logo -->
 				<img src="images/logos/beckmen-vineyards.png" width="94" height="78" alt="Beckmen Vineyards"/>
-				<p>I am currently working on the rebranding and relaunching of Beckmen Vineyards website and wine club. You can follow our work by clicking on the Instagram hashtag above.</p>
+				<p>I am currently working on the rebranding and relaunching of Beckmen Vineyards' website and wine club. You can follow our work by clicking on the Instagram hashtag above.</p>
 			</div>
 		</section>
 		<section id="work">
@@ -76,7 +75,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="http://www.nixon100.org">
+					<a href="http://www.nixon100.org/exhibit/">
 						<h4>Richard Nixon Centennial</h4>
 						<figure>
 							<img src="images/featured-projects/richard-nixon.jpg" alt="Richard Nixon" width="16" height="9"/>
@@ -101,7 +100,7 @@
 		</section>
 		<section id="stats">
 			<h2>Experience in Numbers</h2>
-			<p>I've been involved in more than 450 projects through out the years. Below are my experience brken down my roles in each project.</p>
+			<p>Over the yeards, I've been involved in more than 450 digital projects. Here are some quick stats on my roles for those projects.</p>
 			<ul>
 				<li>
 					<h5>
@@ -139,67 +138,102 @@
 		</section>
 		<section id="personal">
 			<h2>Personal &amp; Preferences</h2>
-						<?xml version="1.0" encoding="utf-8"?>
-			<!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-			<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-			<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-				 width="100.08px" height="100.08px" viewBox="-0.622 -6.066 100.08 100.08" enable-background="new -0.622 -6.066 100.08 100.08"
-				 xml:space="preserve">
-			<path d="M10.534,84.985V67.824C4.024,67.351,0,66.048,0,64.747l0.828-24.028c0-1.42,8.167-2.13,9.706-2.13V12.192
-				C4.498,8.641,0.355,4.261,0.355,1.894C0.355,0.474,1.657,0,3.433,0c2.958,0,8.285,1.539,13.493,4.499
-				c6.865,3.906,11.6,8.167,11.6,11.363c-0.473,1.539-1.775,2.012-3.195,2.012c-2.604,0-6.51-1.302-10.535-3.314v24.029h2.367
-				l2.959,0.473c-0.592-0.592-1.065-1.539-1.065-2.13l1.894-14.796c0.355-2.841,6.037-3.669,9.232-3.669
-				c4.734,0,9.706,1.302,12.666,3.433c1.539,0.828,2.13,1.894,2.13,2.959l-1.42,13.139h2.486c-0.119-0.474-0.119-1.065-0.119-1.539
-				l-0.947-9.232c0-4.261,5.564-7.221,11.363-7.221c4.379,0,8.996,1.42,9.707,4.498c0.236,0.829,0.236,1.657,0.236,2.367
-				c0,0.829,0,1.42,0.236,2.13l2.723-0.71V15.506c-7.457-0.237-13.256-1.303-13.256-3.077c0-1.421,5.799-2.723,13.256-2.96V8.167h4.262
-				v1.302c7.338,0.237,12.9,1.539,12.9,2.96c0,1.538-5.562,2.84-12.9,3.077v11.718l5.443-0.592V16.571h4.262v9.825
-				c5.801,0.473,13.021,2.367,15.033,2.84l0.592,0.119c-3.434,0.947-9.824,2.486-15.625,3.314V84.75h-4.262V32.669
-				c-1.775,0-3.668-0.473-5.443-0.71v4.972c2.367,0.355,3.904,0.828,3.904,1.657c0,3.077,0.238,6.036,0.475,8.876
-				c-0.711,1.186-2.012,1.658-4.379,2.368v36.575h-4.262l-6.865-5.326c-4.498,4.261-10.535,6.865-17.163,6.865
-				c-6.392,0-12.191-2.369-16.69-6.154l-7.575,5.09l-2.367-3.434l7.102-4.734c-2.486-3.197-4.261-6.865-5.09-10.654h-5.799v16.926
-				H10.534L10.534,84.985z M65.338,63.091c0-12.074-7.695-20.125-20.122-20.125c-11.6,0-20.123,9.114-20.123,20.715
-				c0,10.534,8.996,19.293,20.123,19.293C56.342,82.974,65.338,73.979,65.338,63.091L65.338,63.091z M65.219,77.885l4.025,3.196v-11.6
-				C68.414,72.56,67.113,75.282,65.219,77.885L65.219,77.885z M69.244,36.457v-5.326l-2.723-0.711c0.354,4.38,0.354,4.735,0.592,4.735
-				c0,0.474,0,0.947-0.236,1.063C67.705,36.22,68.414,36.457,69.244,36.457L69.244,36.457z M66.877,50.661
-				c1.064,1.896,1.775,3.788,2.367,6.037v-6.273C68.414,50.661,67.705,50.661,66.877,50.661L66.877,50.661z M27.698,45.097l2.249-2.012
-				l-2.131-0.355C27.815,43.559,27.698,44.151,27.698,45.097z"/>
-			</svg>
-			<?xml version="1.0" encoding="utf-8"?>
-			<!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-			<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-			<svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-				 width="100px" height="100.08px" viewBox="0 0 100 100.08" enable-background="new 0 0 100 100.08" xml:space="preserve">
-			<path d="M50,7.034c-23.677,0-42.942,19.104-42.942,42.589c0,23.489,19.266,42.595,42.942,42.595
-				c23.676,0,42.942-19.106,42.942-42.595C92.942,26.138,73.677,7.034,50,7.034z M63.203,13.161
-				c6.196,2.309,11.633,6.157,15.825,11.122c2.945,5.153,3.534,7.769,3.354,9.071l-11.869,4.338l-12.708-8.065
-				c-0.878-4.611-2.956-12.077-3.617-14.426C57.404,13.21,62.624,13.161,63.203,13.161z M51.402,15.217l-0.021,0.006
-				c0.027,0.091,2.607,9.071,3.678,14.432l-11.476,9.418l-18.386-2.738c0,0-1.138-4.892-1.12-8.828l0.002,0.006
-				c0.07-0.097,6.477-10.367,17.182-13.698C41.263,13.815,47.633,14.11,51.402,15.217z M33.089,14.767
-				c-5.682,3.843-9.68,9.044-10.873,10.708c-1.536,0.647-3.139,1.977-4.478,3.276C21.456,22.78,26.768,17.925,33.089,14.767z
-				 M11.989,48.753c0-0.651,0.066-1.29,0.1-1.941c1.038,1.813,2.549,3.173,3.65,4.008c0.925,3.513,3.556,12.48,7.879,19.594
-				c-0.128,2.831,0.137,4.764,0.459,6.06C16.659,69.531,11.989,59.689,11.989,48.753z M26.01,69.153
-				c-4.454-7.267-7.131-16.95-7.824-19.679c2.78-5.923,6.382-10.401,6.382-10.401l18,2.623c2.044,5.896,4.904,12.027,6.281,14.893
-				C46.847,59.58,41.222,67.9,37.9,71.989C34.713,72.035,29.131,70.255,26.01,69.153z M49.998,86.762c-3.301,0-6.49-0.463-9.546-1.261
-				c3.176-0.096,5.05-0.851,6.118-1.574c0.962,0.206,3.739,0.735,7.447,0.735c3.781,0,8.515-0.575,13.2-2.586
-				c0.249,0.086,0.495,0.131,0.744,0.161C62.609,85.121,56.488,86.762,49.998,86.762z M66.962,79.25c-9.564,4.506-20.001,2-20.11,1.973
-				l-0.779-0.398c-2.835-2.602-5.239-6.587-5.701-7.393c-0.024-0.043-0.034-0.086-0.055-0.129c3.413-4.288,8.7-12.101,10.712-15.111
-				c10.784-0.469,15.034-1.32,15.034-1.32c0.039,0.06,5.521,7.206,8.119,13.604C72.874,73.596,69.071,77.21,66.962,79.25z
-				 M84.428,63.617c-4.356,3.438-8.208,4.789-8.208,4.789c-1.724-3.396-7.757-13.137-7.757-13.137
-				c1.995-4.958,2.802-11.797,3.213-15.125l11.355-4.153c2.814,2.729,4.302,7.432,4.795,9.282c0.105,1.15,0.18,2.312,0.18,3.48
-				c0,5.615-1.253,10.921-3.45,15.722C84.55,63.903,84.428,63.617,84.428,63.617z"/>
-			</svg>
-			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Livello_1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
-			<polygon points="93.844,43.76 52.389,70.388 52.389,85.92 100,55.314 "/>
-			<polygon points="0,55.314 47.611,85.92 47.611,70.384 6.174,43.718 "/>
-			<path d="M50,14.08L9.724,39.972L50,65.887l40.318-25.888L50,14.08z M50,30.034L29.95,42.929l-5.027-3.228L50,23.576l25.077,16.125  l-5.026,3.228L50,30.034z"/>
-			</svg>
-			http://urbaninfluence.com/work/
-			<img src="images/softwares-techniques/evernote.png" width="200" height="200" alt="Evernote">
-			<img src="images/softwares-techniques/philz-coffee.png" width="200" height="200" alt="Philz Coffee">
-			<img src="images/softwares-techniques/pomodoro.png"  alt="Pomodoro">
-			<img src="images/softwares-techniques/terminal.png" width="200" height="200" alt="Terminal">
-			<img src="images/softwares-techniques/textmate.png" width="200" height="200" alt="Textmate">
-			</p>
+			<p>http://urbaninfluence.com/work/</p>
+			<ul>
+				<li>
+					Air Druming since 1985. 
+					<?xml version="1.0" encoding="utf-8"?>
+					<!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+					<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+						 width="100.08px" height="100.08px" viewBox="-0.622 -6.066 100.08 100.08" enable-background="new -0.622 -6.066 100.08 100.08"
+						 xml:space="preserve">
+					<path d="M10.534,84.985V67.824C4.024,67.351,0,66.048,0,64.747l0.828-24.028c0-1.42,8.167-2.13,9.706-2.13V12.192
+						C4.498,8.641,0.355,4.261,0.355,1.894C0.355,0.474,1.657,0,3.433,0c2.958,0,8.285,1.539,13.493,4.499
+						c6.865,3.906,11.6,8.167,11.6,11.363c-0.473,1.539-1.775,2.012-3.195,2.012c-2.604,0-6.51-1.302-10.535-3.314v24.029h2.367
+						l2.959,0.473c-0.592-0.592-1.065-1.539-1.065-2.13l1.894-14.796c0.355-2.841,6.037-3.669,9.232-3.669
+						c4.734,0,9.706,1.302,12.666,3.433c1.539,0.828,2.13,1.894,2.13,2.959l-1.42,13.139h2.486c-0.119-0.474-0.119-1.065-0.119-1.539
+						l-0.947-9.232c0-4.261,5.564-7.221,11.363-7.221c4.379,0,8.996,1.42,9.707,4.498c0.236,0.829,0.236,1.657,0.236,2.367
+						c0,0.829,0,1.42,0.236,2.13l2.723-0.71V15.506c-7.457-0.237-13.256-1.303-13.256-3.077c0-1.421,5.799-2.723,13.256-2.96V8.167h4.262
+						v1.302c7.338,0.237,12.9,1.539,12.9,2.96c0,1.538-5.562,2.84-12.9,3.077v11.718l5.443-0.592V16.571h4.262v9.825
+						c5.801,0.473,13.021,2.367,15.033,2.84l0.592,0.119c-3.434,0.947-9.824,2.486-15.625,3.314V84.75h-4.262V32.669
+						c-1.775,0-3.668-0.473-5.443-0.71v4.972c2.367,0.355,3.904,0.828,3.904,1.657c0,3.077,0.238,6.036,0.475,8.876
+						c-0.711,1.186-2.012,1.658-4.379,2.368v36.575h-4.262l-6.865-5.326c-4.498,4.261-10.535,6.865-17.163,6.865
+						c-6.392,0-12.191-2.369-16.69-6.154l-7.575,5.09l-2.367-3.434l7.102-4.734c-2.486-3.197-4.261-6.865-5.09-10.654h-5.799v16.926
+						H10.534L10.534,84.985z M65.338,63.091c0-12.074-7.695-20.125-20.122-20.125c-11.6,0-20.123,9.114-20.123,20.715
+						c0,10.534,8.996,19.293,20.123,19.293C56.342,82.974,65.338,73.979,65.338,63.091L65.338,63.091z M65.219,77.885l4.025,3.196v-11.6
+						C68.414,72.56,67.113,75.282,65.219,77.885L65.219,77.885z M69.244,36.457v-5.326l-2.723-0.711c0.354,4.38,0.354,4.735,0.592,4.735
+						c0,0.474,0,0.947-0.236,1.063C67.705,36.22,68.414,36.457,69.244,36.457L69.244,36.457z M66.877,50.661
+						c1.064,1.896,1.775,3.788,2.367,6.037v-6.273C68.414,50.661,67.705,50.661,66.877,50.661L66.877,50.661z M27.698,45.097l2.249-2.012
+						l-2.131-0.355C27.815,43.559,27.698,44.151,27.698,45.097z"/>
+					</svg>
+				</li>
+				<li>
+					Football, Futebol, Futball, ok, ok, soccer.
+					<?xml version="1.0" encoding="utf-8"?>
+					<!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+					<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+					<svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+						 width="100px" height="100.08px" viewBox="0 0 100 100.08" enable-background="new 0 0 100 100.08" xml:space="preserve">
+					<path d="M50,7.034c-23.677,0-42.942,19.104-42.942,42.589c0,23.489,19.266,42.595,42.942,42.595
+						c23.676,0,42.942-19.106,42.942-42.595C92.942,26.138,73.677,7.034,50,7.034z M63.203,13.161
+						c6.196,2.309,11.633,6.157,15.825,11.122c2.945,5.153,3.534,7.769,3.354,9.071l-11.869,4.338l-12.708-8.065
+						c-0.878-4.611-2.956-12.077-3.617-14.426C57.404,13.21,62.624,13.161,63.203,13.161z M51.402,15.217l-0.021,0.006
+						c0.027,0.091,2.607,9.071,3.678,14.432l-11.476,9.418l-18.386-2.738c0,0-1.138-4.892-1.12-8.828l0.002,0.006
+						c0.07-0.097,6.477-10.367,17.182-13.698C41.263,13.815,47.633,14.11,51.402,15.217z M33.089,14.767
+						c-5.682,3.843-9.68,9.044-10.873,10.708c-1.536,0.647-3.139,1.977-4.478,3.276C21.456,22.78,26.768,17.925,33.089,14.767z
+						 M11.989,48.753c0-0.651,0.066-1.29,0.1-1.941c1.038,1.813,2.549,3.173,3.65,4.008c0.925,3.513,3.556,12.48,7.879,19.594
+						c-0.128,2.831,0.137,4.764,0.459,6.06C16.659,69.531,11.989,59.689,11.989,48.753z M26.01,69.153
+						c-4.454-7.267-7.131-16.95-7.824-19.679c2.78-5.923,6.382-10.401,6.382-10.401l18,2.623c2.044,5.896,4.904,12.027,6.281,14.893
+						C46.847,59.58,41.222,67.9,37.9,71.989C34.713,72.035,29.131,70.255,26.01,69.153z M49.998,86.762c-3.301,0-6.49-0.463-9.546-1.261
+						c3.176-0.096,5.05-0.851,6.118-1.574c0.962,0.206,3.739,0.735,7.447,0.735c3.781,0,8.515-0.575,13.2-2.586
+						c0.249,0.086,0.495,0.131,0.744,0.161C62.609,85.121,56.488,86.762,49.998,86.762z M66.962,79.25c-9.564,4.506-20.001,2-20.11,1.973
+						l-0.779-0.398c-2.835-2.602-5.239-6.587-5.701-7.393c-0.024-0.043-0.034-0.086-0.055-0.129c3.413-4.288,8.7-12.101,10.712-15.111
+						c10.784-0.469,15.034-1.32,15.034-1.32c0.039,0.06,5.521,7.206,8.119,13.604C72.874,73.596,69.071,77.21,66.962,79.25z
+						 M84.428,63.617c-4.356,3.438-8.208,4.789-8.208,4.789c-1.724-3.396-7.757-13.137-7.757-13.137
+						c1.995-4.958,2.802-11.797,3.213-15.125l11.355-4.153c2.814,2.729,4.302,7.432,4.795,9.282c0.105,1.15,0.18,2.312,0.18,3.48
+						c0,5.615-1.253,10.921-3.45,15.722C84.55,63.903,84.428,63.617,84.428,63.617z"/>
+					</svg>
+				</li>
+				<li>
+					Chocolate, enough said. 
+					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Livello_1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+					<polygon points="93.844,43.76 52.389,70.388 52.389,85.92 100,55.314 "/>
+					<polygon points="0,55.314 47.611,85.92 47.611,70.384 6.174,43.718 "/>
+					<path d="M50,14.08L9.724,39.972L50,65.887l40.318-25.888L50,14.08z M50,30.034L29.95,42.929l-5.027-3.228L50,23.576l25.077,16.125  l-5.026,3.228L50,30.034z"/>
+					</svg>
+				</li>
+				<li class="evernote">
+					<a href="http://www.evernote.com">
+						<strong>Evernote</strong>
+						Evernote for every note.
+					</a>
+				</li>
+				<li class="philz-coffee">
+					<a href="http://www.evernote.com">
+						<strong>Philz Coffee</strong>
+						Philz Coffee for an outstanding sip.
+					</a>
+				</li>
+				<li class="pomodoro">
+					<a href="http://www.pomodorotechnique.com">
+						<strong>Pomodoto Technique</strong>
+						Pomodoro Techninique for a prouctive day.
+					</a>
+				</li>
+				<li class="terminal">
+					<a href="http://www.textmate.com">
+						<strong>Terminal</strong>
+						Terminal, agility and feeling hacky.
+					</a>
+				</li>
+				<li class="textmate">
+					<a href="http://www.textmate.com">
+						<strong>Textmate</strong>
+						Textmate, my code buddy. Pair programming so do speak.
+					</a>
+				</li>
+			</ul>
 		</section>
 		<footer>
 			<nav>
