--- a/index.html
+++ b/index.html
@@ -138,77 +138,60 @@
 		</section>
 		<section id="personal">
 			<h2>Personal &amp; Preferences</h2>
-			<p>http://urbaninfluence.com/work/</p>
 			<ul>
-				<li>
-					Air Druming since 1985. 
-					<?xml version="1.0" encoding="utf-8"?>
-					<!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-					<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-						 width="100.08px" height="100.08px" viewBox="-0.622 -6.066 100.08 100.08" enable-background="new -0.622 -6.066 100.08 100.08"
-						 xml:space="preserve">
-					<path d="M10.534,84.985V67.824C4.024,67.351,0,66.048,0,64.747l0.828-24.028c0-1.42,8.167-2.13,9.706-2.13V12.192
-						C4.498,8.641,0.355,4.261,0.355,1.894C0.355,0.474,1.657,0,3.433,0c2.958,0,8.285,1.539,13.493,4.499
-						c6.865,3.906,11.6,8.167,11.6,11.363c-0.473,1.539-1.775,2.012-3.195,2.012c-2.604,0-6.51-1.302-10.535-3.314v24.029h2.367
-						l2.959,0.473c-0.592-0.592-1.065-1.539-1.065-2.13l1.894-14.796c0.355-2.841,6.037-3.669,9.232-3.669
-						c4.734,0,9.706,1.302,12.666,3.433c1.539,0.828,2.13,1.894,2.13,2.959l-1.42,13.139h2.486c-0.119-0.474-0.119-1.065-0.119-1.539
-						l-0.947-9.232c0-4.261,5.564-7.221,11.363-7.221c4.379,0,8.996,1.42,9.707,4.498c0.236,0.829,0.236,1.657,0.236,2.367
-						c0,0.829,0,1.42,0.236,2.13l2.723-0.71V15.506c-7.457-0.237-13.256-1.303-13.256-3.077c0-1.421,5.799-2.723,13.256-2.96V8.167h4.262
-						v1.302c7.338,0.237,12.9,1.539,12.9,2.96c0,1.538-5.562,2.84-12.9,3.077v11.718l5.443-0.592V16.571h4.262v9.825
-						c5.801,0.473,13.021,2.367,15.033,2.84l0.592,0.119c-3.434,0.947-9.824,2.486-15.625,3.314V84.75h-4.262V32.669
-						c-1.775,0-3.668-0.473-5.443-0.71v4.972c2.367,0.355,3.904,0.828,3.904,1.657c0,3.077,0.238,6.036,0.475,8.876
-						c-0.711,1.186-2.012,1.658-4.379,2.368v36.575h-4.262l-6.865-5.326c-4.498,4.261-10.535,6.865-17.163,6.865
-						c-6.392,0-12.191-2.369-16.69-6.154l-7.575,5.09l-2.367-3.434l7.102-4.734c-2.486-3.197-4.261-6.865-5.09-10.654h-5.799v16.926
-						H10.534L10.534,84.985z M65.338,63.091c0-12.074-7.695-20.125-20.122-20.125c-11.6,0-20.123,9.114-20.123,20.715
-						c0,10.534,8.996,19.293,20.123,19.293C56.342,82.974,65.338,73.979,65.338,63.091L65.338,63.091z M65.219,77.885l4.025,3.196v-11.6
-						C68.414,72.56,67.113,75.282,65.219,77.885L65.219,77.885z M69.244,36.457v-5.326l-2.723-0.711c0.354,4.38,0.354,4.735,0.592,4.735
-						c0,0.474,0,0.947-0.236,1.063C67.705,36.22,68.414,36.457,69.244,36.457L69.244,36.457z M66.877,50.661
-						c1.064,1.896,1.775,3.788,2.367,6.037v-6.273C68.414,50.661,67.705,50.661,66.877,50.661L66.877,50.661z M27.698,45.097l2.249-2.012
-						l-2.131-0.355C27.815,43.559,27.698,44.151,27.698,45.097z"/>
-					</svg>
+				<li class="drums">
+					<a href="http://www.cbf.com.br">
+						<strong>Drums</strong>
+						<hr/>
+						Air Druming since 1985. 
+					</a>
 				</li>
 				<li class="soccer">
 					<a href="http://www.cbf.com.br">
 						<strong>Futebol</strong>
+						<hr/>
 						Football, Futebol, Futball, ok, ok, soccer.
 					</a>
 				</li>
-				<li>
-					Chocolate, enough said. 
-					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Livello_1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
-					<polygon points="93.844,43.76 52.389,70.388 52.389,85.92 100,55.314 "/>
-					<polygon points="0,55.314 47.611,85.92 47.611,70.384 6.174,43.718 "/>
-					<path d="M50,14.08L9.724,39.972L50,65.887l40.318-25.888L50,14.08z M50,30.034L29.95,42.929l-5.027-3.228L50,23.576l25.077,16.125  l-5.026,3.228L50,30.034z"/>
-					</svg>
+				<li class="drums">
+					<a href="http://www.cbf.com.br">
+						<strong>Chocolate</strong>
+						<hr/>
+						Chocolate, enough said. 
+					</a>
 				</li>
 				<li class="evernote">
 					<a href="http://www.evernote.com">
 						<strong>Evernote</strong>
+						<hr/>
 						Evernote for every note.
 					</a>
 				</li>
 				<li class="philz-coffee">
 					<a href="http://www.evernote.com">
 						<strong>Philz Coffee</strong>
+						<hr/>
 						Philz Coffee for an outstanding sip.
 					</a>
 				</li>
 				<li class="pomodoro">
 					<a href="http://www.pomodorotechnique.com">
 						<strong>Pomodoto Technique</strong>
+						<hr/>
 						Pomodoro Techninique for a prouctive day.
 					</a>
 				</li>
 				<li class="terminal">
 					<a href="http://www.textmate.com">
 						<strong>Terminal</strong>
+						<hr/>
 						Terminal, agility and feeling hacky.
 					</a>
 				</li>
 				<li class="textmate">
 					<a href="http://www.textmate.com">
 						<strong>Textmate</strong>
+						<hr/>
 						Textmate, my code buddy. Pair programming so do speak.
 					</a>
 				</li>
