working on design and interactions for the selected projects section

--- a/index.html
+++ b/index.html
@@ -61,35 +61,38 @@
 		</section>
 		<section id="work">
 			<h2>Selected <strong>projects</strong></h2>
-			<ul class="flexbox">
-				<li class="the-fare-trade">
+			<ul class="">
+				<li>
+					<a href="http://www.nixon100.org/exhibit/">
+						<h4>Richard Nixon Centennial</h4>
+						<figure>
+							<img src="images/featured-projects/richard-nixon.jpg" alt="Richard Nixon" width="16" height="9"/>
+							<img src="images/featured-projects/richard-nixon-logo.jpg" alt="Richard Nixon - Logo" width="16" height="9" class="replace"/>							
+							<figcaption>
+								Digital exposition for exploring the legacy of the president Richard Nixon.
+							</figcaption>
+						</figure>
+					</a>
+				</li>
+				<li>
 					<a href="http://www.thefaretrade.com">
 						<h4>The Fare Trade</h4>
 						<figure>
-							<img src="images/featured-projects/the-fare-trade.jpg" alt="The Fare Trade - Site Screenshot" width="16" height="9"/>
+							<img src="images/featured-projects/the-fare-trade.jpg" alt="The Fare Trade" width="16" height="9"/>
+							<img src="images/featured-projects/the-fare-trade-logo.jpg" alt="The Fare Trade - Logo" width="16" height="9" class="replace"/>
 							<figcaption>
-								Subscription based monthly boxes with curated gourmet ingredients delivered to your door.
+								Subscription based monthly gourmet ingredients box delivered to your door.
 							</figcaption>
 						</figure>
 						
 					</a>
 				</li>
 				<li>
-					<a href="http://www.nixon100.org/exhibit/">
-						<h4>Richard Nixon Centennial</h4>
-						<figure>
-							<img src="images/featured-projects/richard-nixon.jpg" alt="Richard Nixon" width="16" height="9"/>
-							<figcaption>
-								Digital exposition for exploring the legacy of the patriot, president, and peacemaker Richard Nixon.
-							</figcaption>
-						</figure>
-					</a>
-				</li>
-				<li>
 					<a href="http://www.zenartsla.com">
 						<h4>ZenArts LA</h4>
 						<figure>
-							<img src="images/featured-projects/zen-arts-la.jpg" alt="Zen Arts LA"/>
+							<img src="images/featured-projects/zen-arts-la.jpg" alt="Zen Arts LA" width="16" height="9"/>
+							<img src="images/featured-projects/zen-arts-la-logo.jpg" alt="Zen Arts LA - Logo" width="16" height="9" class="replace"/>							
 							<figcaption>
 								Elegant and extravagant corporate event entertainment and production company.
 							</figcaption>
@@ -176,7 +179,7 @@
 				</li>
 				<li class="pomodoro">
 					<a href="http://www.pomodorotechnique.com">
-						<strong>Pomodoto Technique</strong>
+						<strong>Pomodoro Technique</strong>
 						<hr/>
 						Pomodoro Techninique for a prouctive day.
 					</a>
@@ -204,7 +207,7 @@
 				<a href="https://github.com/philipecasarotte/" class="fa fa-github"></a>
 			</nav>
 			<a href="tel:13106171037">+1 (310) 617.1037</a>
-			<a href="mailto:philipe@casarotte.com?Subject=Hey Phil(ipe)!">philipe [at] casarotte [dot] com</a>
+			<a href="mailto:philipe@casarotte.com?Subject=Hey Phil!(ipe)">philipe [at] casarotte [dot] com</a>
 			<address>Santa Monica, CA</address>
 		</footer>
 		
